tests/negative/ImportCycle/C.mjuvix
module C;
import A;
end;